<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:padding="5dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:background="@drawable/reference_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rvdata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="主  车"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="3dp"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="2dp"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="center"
                android:textSize="16sp"
                android:text="码 盘:"
                />

            <EditText
                android:id="@+id/coded_disc_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/mp_data" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:text="@string/line_disc"
                />

            <EditText
                android:id="@+id/angle_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/line_data" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:text="@string/angle_disc"/>
            <EditText
                android:id="@+id/speed_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/sp_data" />


        </LinearLayout>
        <!--内层参数填充-->
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="超声波："
                android:textSize="10sp" />

            <TextView
                android:id="@+id/ultraSonicTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 mm"
                android:textSize="10sp"
                android:lines="1"
                android:ellipsize="end"/>



            <!--光照度-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="光照度："
                android:textSize="10sp" />

            <TextView
                android:id="@+id/lightTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 lx"
                android:textSize="10sp"
                android:lines="1"
                android:ellipsize="end"/>



            <!--码盘值-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="码盘值："
                android:textSize="10sp" />

            <TextView
                android:id="@+id/codedDiskTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="10sp" />
            <!--光敏-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="光敏状态："
                android:textSize="10sp" />

            <TextView
                android:id="@+id/psStatusTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="10sp" />

            <!--运行状态-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="运行状态："
                android:textSize="10sp" />

            <TextView
                android:id="@+id/stateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="10sp" />

        </LinearLayout>



    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="10dp">

<!--            初始预设和启动预设-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <Button
                    android:id="@+id/bt_set_initial"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="初始预设"
                    android:textSize="9dp"
                    />
                <Button
                    android:id="@+id/bt_start_initial"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="启动预设"
                    android:textSize="9dp"
                    />


            </LinearLayout>

<!--                左预设和启动左预设-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <Button
                    android:id="@+id/bt_set_left"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="左预设"
                    android:textSize="9dp"
                    />
                <Button
                    android:id="@+id/bt_start_left"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="启动左预设"
                    android:textSize="9dp"
                    />
            </LinearLayout>

<!--            右预设和启动右预设-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <Button
                    android:id="@+id/bt_set_right"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="右预设"
                    android:textSize="9dp"
                    />
                <Button
                    android:id="@+id/bt_start_right"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="启动右预设"
                    android:textSize="9dp"
                    />
            </LinearLayout>
<!--            左转   右转-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <Button
                    android:id="@+id/bt_left"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="左转"
                    android:textSize="9dp"
                    />
                <Button
                    android:id="@+id/bt_right"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="右转"
                    android:textSize="9dp"
                    />
            </LinearLayout>
<!--            抬头 低头-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                >
                <Button
                    android:id="@+id/bt_up"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="抬头"
                    android:textSize="9dp"
                    />
                <Button
                    android:id="@+id/bt_down"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="低头"
                    android:textSize="9dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                >
                <Button
                    android:id="@+id/btn_shape"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="形状识别"
                    android:textSize="9dp"
                    />
                <Button
                    android:id="@+id/btn_traffic_light"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="交通灯识别"
                    android:textSize="9dp"
                    />


            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                >
                <Button
                    android:id="@+id/btn_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="文字识别"
                    android:textSize="9dp"
                    />
                <Button
                    android:id="@+id/btn_qr"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="识别二维码"
                    android:textSize="9dp"
                    />

            </LinearLayout>
<!--            抬头预设和启动抬头预设&ndash;&gt;-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <Button
                    android:id="@+id/bt_traffic_sign"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="交通标志"
                    android:textSize="9dp"
                    />
                <Button
                    android:id="@+id/btn_position"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="形容检测"
                    android:textSize="9dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <Button
                    android:id="@+id/btn_plate"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="车牌识别"
                    android:textSize="9dp"
                    />
                <Button
                    android:id="@+id/btn_Carshape"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="车型识别"
                    android:textSize="9dp"
                    />


            </LinearLayout>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            >
            <ImageButton
                android:id="@+id/up_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/upbutton_img" />
            <ImageButton
                android:id="@+id/stop_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@id/up_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/stopbutton_img" />

            <ImageButton
                android:id="@+id/below_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@id/stop_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/belowbutton_img" />

            <ImageButton
                android:id="@+id/right_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignBottom="@+id/stop_button"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/up_button"
                android:background="@drawable/rightbutton_img" />

            <ImageButton
                android:id="@+id/left_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_above="@+id/below_button"
                android:layout_marginRight="20dp"
                android:layout_toLeftOf="@+id/up_button"
                android:background="@drawable/leftbutton_img" />
        </RelativeLayout>


    </LinearLayout>



</LinearLayout>